--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,26 @@
+body {
+    box-sizing: border-box;
+}
+
+header {
+    height: 75px;
+    width: 100%;
+}
+
+h1 {
+    font-size: 40px;
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+
 .container {
     width: 70%;
     height: 40%;
-    border: 1px solid red;
+    margin: 0 auto;
+}
+
+.imgToggle {
+    width: 100%;
 }
