--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,23 +3,44 @@ body {
 }
 
 header {
-    height: 75px;
     width: 100%;
 }
 
 h1 {
-    font-size: 40px;
+    font-size: 50px;
     text-align: center;
     padding-top: 10px;
     padding-bottom: 10px;
 }
 
+.main-nav {
+    width: 100%;
+    height: 50px;
+    background: black;
+}
 
-.container {
+
+.search-nav {
+    float: right;
+    margin-right: 20px;
+    margin-top: 5px;
+}
+
+.search-nav button {
+    margin-left: -5px;
+    padding-right: 10px;
+}
+
+input {
+    height: 30px;
+    width: 200px;
+}
+
+
+.container1 {
     width: 60%;
     height: 50%;
-    display: inline-block;
-    /*margin: 0 auto;*/
+    margin: 0 auto;
 }
 
 .imgToggle {
@@ -27,22 +48,78 @@ h1 {
 }
 
 .container2 {
-    width: 30%;
-    height: 50%;
     font-size: 15px;
     overflow: auto;
-    display: none;
-    display: inline-block;
-}
-
-.mainContent {
-    width: 90%;
+    border: 1px solid black;
+    width: 40%;
     margin: 0 auto;
-    display: inline-block;
 }
 
 .container2 h2 {
     font-weight: bolder;
-    font-size: 18px;
+    font-size: 20px;
     text-align: center;
+    padding: 10px 0;
+    text-decoration: underline;
+}
+
+.container2 a {
+    margin-left: 10px;
+    padding-bottom: 10px;
+    line-height: 1.5;
+    color: black;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+    color: firebrick;
+}
+
+/* Dropdown Button */
+.dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+    margin-left: 20px;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd;}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {background-color: #3e8e41;}
+
+::-webkit-scrollbar {
+    width: 0px;  /* remove scrollbar space */
+    background: transparent;  /* optional: just make scrollbar invisible */
 }
