fixed bug with old chart data showing when you hovered the mouse over the chart

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,7 +192,7 @@ a:hover {
 
 /* Modal Styling */
 .modal {
-    display: block;
+    display: none;
     position: fixed;
     z-index: 1;
     left: 0;
