--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,5 +1,39 @@
-h1 {
+body {
+    margin: 0;
+    box-sizing: border-box;
+}
+
+header {
+    margin: 0;
+}
+
+#logo {
     text-align: center;
     color: firebrick;
-    font-size: 75px;
+    font-size: 100px;
+    font-family:'Cormorant SC', serif;
+    height: 103px;
+    margin-bottom: 0;
+    text-shadow: 0 1px 0 #ccc,
+               0 2px 0 #c9c9c9,
+               0 3px 0 #bbb,
+               0 4px 0 #b9b9b9,
+               0 5px 0 #aaa,
+               0 6px 1px rgba(0,0,0,.1),
+               0 0 5px rgba(0,0,0,.1),
+               0 1px 3px rgba(0,0,0,.3),
+               0 3px 5px rgba(0,0,0,.2),
+               0 5px 10px rgba(0,0,0,.25),
+               0 10px 10px rgba(0,0,0,.2),
+               0 20px 20px rgba(0,0,0,.15);
+
+}
+
+h2 {
+    text-align: center;
+    color: black;
+    font-size: 30px;
+    font-family: 'Cormorant SC', serif;
+    margin-top: 5px;
+    height: 35px;
 }
