--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,7 @@ h1 {
     color: firebrick;
 }
 
+/* Main navigation and buttons */
 .main-nav {
     width: 100%;
     height: 50px;
@@ -33,12 +34,18 @@ h1 {
 .search-nav button {
     margin-left: -5px;
     padding-right: 10px;
-    height: 36px;
+    height: 37px;
+    outline: none;
 }
 
 input {
     height: 30px;
     width: 200px;
+    font-size: 15px;
+}
+
+#logOut {
+    margin-left: 530px;
 }
 
 .wrapper {
@@ -141,6 +148,14 @@ a:hover {
     text-decoration: underline;
     color: firebrick;
 }
+#logOut:hover {
+    background: firebrick;
+    color: white;
+}
+.searchBtn:hover {
+    background: firebrick;
+    color: white;
+}
 
 /* Dropdown Button */
 .dropbtn {
@@ -215,7 +230,7 @@ a:hover {
     font-weight: bolder;
 }
 .closeBtn {
-    color: white;
+    color: firebrick;
     font-size: 30px;
     display: inline-block;
     margin-left: 95%;
@@ -223,6 +238,7 @@ a:hover {
 .closeBtn:hover {
     color: black;
     text-decoration: none;
+    cursor: pointer;
 }
 
 
